# VSports

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  VSpots.sublime-project  VSpots.sublime-workspace  main.cpp
data/: high_TD_episode_0.txt  high_TD_episode_1.txt  high_TD_episode_10.txt  high_TD_episode_11.txt  high_TD_episode_12.txt  high_TD_episode_13.txt  high_TD_episode_14.txt  high_TD_episode_15.txt  high_TD_episode_16.txt  high_TD_episode_17.txt  high_TD_episode_18.txt  high_TD_episode_19.txt  high_TD_episode_2.txt  high_TD_episode_20.txt  high_TD_episode_21.txt  high_TD_episode_22.txt  high_TD_episode_23.txt  high_TD_episode_24.txt  high_TD_episode_25.txt  high_TD_episode_26.txt  high_TD_episode_27.txt  high_TD_episode_28.txt  high_TD_episode_29.txt  high_TD_episode_3.txt  high_TD_episode_30.txt  high_TD_episode_31.txt  high_TD_episode_32.txt  high_TD_episode_33.txt  high_TD_episode_34.txt  high_TD_episode_35.txt  high_TD_episode_36.txt  high_TD_episode_37.txt  high_TD_episode_38.txt  high_TD_episode_39.txt  high_TD_episode_4.txt  high_TD_episode_5.txt  high_TD_episode_6.txt  high_TD_episode_7.txt  high_TD_episode_8.txt  high_TD_episode_9.txt
data/skels/: 16_11_1.skel  16_12_1.skel  CMU_t_pose.skel  s_003_1_1.skel  s_003_2_1.skel  s_004_1_1.skel  s_004_1_2.skel
model/: CMakeLists.txt  SkelHelper.cpp  SkelHelper.h  SkelMaker.cpp  SkelMaker.h
motion/: BVHmanager.cpp  BVHmanager.h  BVHparser.cpp  BVHparser.h
nn/: 0.pt  0_sc.pt  1.pt  10.pt  100_sc.pt  11.pt  12.pt  120_sc.pt  13.pt  14.pt  140_sc.pt  15.pt  16.pt  17.pt  18.pt  19.pt  2.pt  20.pt  20_sc.pt  21.pt  22.pt  3.pt  4.pt  40_sc.pt  5.pt  6.pt  60_sc.pt  7.pt  8.pt  80_sc.pt  9.pt  current.pt  current_la.pt  current_sc.pt  max.pt  max_sc.pt
nn_dqn_lar_h/nn0/: 0_0.pt  0_0_dqn.pt  0_0_ppo.pt  100_0_dqn.pt  100_0_ppo.pt  200_0_dqn.pt  200_0_ppo.pt  300_0_dqn.pt  300_0_ppo.pt  400_0_dqn.pt  400_0_ppo.pt  500_0_dqn.pt  500_0_ppo.pt  600_0_dqn.pt  600_0_ppo.pt  current_0.pt  current_0_dqn.pt  current_0_ppo.pt  max_0.pt  max_0_dqn.pt  max_0_ppo.pt  rms.ms
plugin11/ICA/: CMakeLists.txt  MotionGenerator.cpp  MotionGenerator.h
pyvs/: ARTraining.py  BallShootingRL.py  CAAE (copy).py  CAAE.py  CMakeLists.txt  ControlVectorTraining.py  DQNTest.py  DQN_ARTraining.py  EnvironmentPython.cpp  EnvironmentPython.h  ImitationLearning.py  LICENSE  LatentARTraining (copy).py  LatentARTraining.py  Model.py  Model_.py  MultiHeadTraining.py  Normalizer.cpp  Normalizer.h  PPO.py  R2D2.py  R2D2_.py  RNNLatentARTraining.py  ReinforcementLearning.py  SLAC.py  ShootARTraining.py  ShootAndDefence.py  ShootFoulARTraining.py  ShootTraining.py  ShootTrainingMap.py  Utils.py  VAE.py  VMC.py  VSEnv.py  WrapperFunctions.cpp  WrapperFunctions.h  _LatentARTraining.py  ouput.txt  output.txt  output1.txt  (+15 more)
pyvs/_backup/: PPO.py  R2D2.py  ReinforcementLearning.py  ShootAndDefence.py  ShootTraining.py  TrainMDNRNN.py  VSEnv.py  _ImitationLearning.py  _ReinforcementLearning.py  test.py
pyvs/caae_nn0/: vae_action_decoder.pt  vae_action_encoder.pt
pyvs/caae_nn1/: vae_action_decoder.pt  vae_action_encoder.pt
pyvs/caae_nn2/: vae_action_decoder.pt  vae_action_encoder.pt
pyvs/caae_nn3/: vae_action_decoder.pt  vae_action_encoder.pt
pyvs/rollout/: RolloutTransitions.py
pyvs/temp/: MotionGenerator.py  RNNConfig.py  RNNModel.py
pyvs/utils/: dataLoader.py  misc.py
pyvs/vae_nn/: vae_action_0.pt  vae_action_1.pt  vae_action_decoder_0.pt  vae_action_decoder_3.pt  vae_action_encoder.pt
pyvs/vae_nn1/: vae_0.pt  vae_action_2.pt  vae_action_3.pt  vae_action_4.pt  vae_action_decoder_0.pt  vae_action_decoder_3.pt  vae_action_encoder.pt
pyvs/vae_nn2/: vae_action_decoder_0.pt  vae_action_decoder_3.pt  vae_action_encoder.pt
pyvs/vae_nn3/: vae_action_decoder_0.pt  vae_action_decoder_3.pt  vae_action_encoder.pt
pyvs/vae_nn4/: vae_action_decoder_0.pt  vae_action_decoder_3.pt  vae_action_encoder.pt
pyvs/vae_nn_sep/: vae_action_decoder_0.pt  vae_action_decoder_3.pt  vae_action_encoder.pt
pyvs/vae_nn_sep_0/: vae_action_decoder_0.pt  vae_action_decoder_1.pt  vae_action_decoder_2.pt  vae_action_decoder_3.pt  vae_action_decoder_4.pt  vae_action_encoder.pt
pyvs/vae_nn_sep_1/: vae_action_decoder_0.pt  vae_action_decoder_1.pt  vae_action_decoder_2.pt  vae_action_decoder_3.pt  vae_action_decoder_4.pt  vae_action_encoder.pt
pyvs/vae_nn_sep_10/: vae_action_decoder_0.pt  vae_action_decoder_1.pt  vae_action_decoder_2.pt  vae_action_decoder_3.pt  vae_action_decoder_4.pt  vae_action_encoder.pt
pyvs/vae_nn_sep_2/: vae_action_decoder_0.pt  vae_action_decoder_1.pt  vae_action_decoder_2.pt  vae_action_decoder_3.pt  vae_action_decoder_4.pt  vae_action_encoder.pt
pyvs/vae_nn_sep_3/: vae_action_decoder_0.pt  vae_action_decoder_1.pt  vae_action_decoder_2.pt  vae_action_decoder_3.pt  vae_action_decoder_4.pt  vae_action_encoder.pt
pyvs/vae_nn_sep_4/: vae_action_decoder_0.pt  vae_action_decoder_1.pt  vae_action_decoder_2.pt  vae_action_decoder_3.pt  vae_action_decoder_4.pt  vae_action_encoder.pt
render/: Camera.cpp  Camera.h  GLUTWindow.cpp  GLUTWindow.h  GLfunctions.cpp  GLfunctions.h  GLfunctionsDART.cpp  GLfunctionsDART.h  SimWindow.cpp  SimWindow.h
save/: current_la.pt  max.pt  max_la.pt  max_sc.pt
saved_exefile/: vsports_multi  vsports_multi_with_hardcoded  vsports_single_shoot
sim/: AgentEnvWindow.cpp  AgentEnvWindow.h  BehaviorTree.cpp  BehaviorTree.h  CMakeLists.txt  Character2D.cpp  Character2D.h  Character3D.cpp  Character3D.h  Environment.cpp  Environment.h  Recorder.cpp  Recorder.h
sim/old/: Environment.cpp  Environment.h
temp/: max_0.pt
utils/: Utils.cpp  Utils.h
vsports/: AgentWindow.cpp  AgentWindow.h  BvhWindow.cpp  BvhWindow.h  EpisodeReplayWindow.cpp  EpisodeReplayWindow.h  ImitationWindow.cpp  ImitationWindow.h  InteractiveWindow.cpp  InteractiveWindow.h  MultiHeadWindow.cpp  MultiHeadWindow.h  MultiSocWindow.cpp  MultiSocWindow.h  SLACWindow.cpp  SLACWindow.h  SimpleSocWindow.cpp  SimpleSocWindow.h  SingleBasketballWindow.cpp  SingleBasketballWindow.h  SingleControlWindow.cpp  SingleControlWindow.h  common.h
(+309 files in other folders)
